// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`new --preset angular should generate an empty nx.json 1`] = `
Object {
  "affected": Object {
    "defaultBase": "master",
  },
  "implicitDependencies": Object {
    ".eslintrc.json": "*",
    "nx.json": "*",
    "package.json": Object {
      "dependencies": "*",
      "devDependencies": "*",
    },
    "tsconfig.base.json": "*",
    "tslint.json": "*",
    "workspace.json": "*",
  },
  "npmScope": "npmScope",
  "projects": Object {},
  "tasksRunnerOptions": Object {
    "default": Object {
      "options": Object {
        "cacheableOperations": Array [
          "build",
          "lint",
          "test",
          "e2e",
        ],
      },
      "runner": "@nrwl/workspace/tasks-runners/default",
    },
  },
}
`;

exports[`new --preset angular should generate an empty workspace.json 1`] = `
Object {
  "cli": Object {
    "defaultCollection": "@nrwl/workspace",
  },
  "generators": Object {
    "@nrwl/angular": Object {
      "application": Object {
        "linter": "eslint",
      },
      "library": Object {
        "linter": "eslint",
      },
      "storybook-configuration": Object {
        "linter": "eslint",
      },
    },
  },
  "projects": Object {},
  "version": 2,
}
`;

exports[`new --preset angular should generate necessary npm dependencies 1`] = `
Object {
  "dependencies": Object {
    "@nrwl/angular": "*",
  },
  "devDependencies": Object {
    "@nrwl/cli": "*",
    "@nrwl/tao": "*",
    "@nrwl/workspace": "*",
    "@types/node": "12.12.38",
    "dotenv": "6.2.0",
    "eslint": "7.10.0",
    "prettier": "2.1.2",
    "ts-node": "~9.1.1",
    "tslint": "~6.1.0",
    "typescript": "~4.0.3",
  },
  "license": "MIT",
  "name": "my-workspace",
  "private": true,
  "scripts": Object {
    "affected": "nx affected",
    "affected:apps": "nx affected:apps",
    "affected:build": "nx affected:build",
    "affected:dep-graph": "nx affected:dep-graph",
    "affected:e2e": "nx affected:e2e",
    "affected:libs": "nx affected:libs",
    "affected:lint": "nx affected:lint",
    "affected:test": "nx affected:test",
    "build": "nx build",
    "dep-graph": "nx dep-graph",
    "e2e": "nx e2e",
    "format": "nx format:write",
    "format:check": "nx format:check",
    "format:write": "nx format:write",
    "help": "nx help",
    "lint": "nx workspace-lint && nx lint",
    "nx": "nx",
    "start": "nx serve",
    "test": "nx test",
    "update": "nx migrate latest",
    "workspace-generator": "nx workspace-generator",
  },
  "version": "0.0.0",
}
`;

exports[`new --preset empty should generate an empty nx.json 1`] = `
Object {
  "affected": Object {
    "defaultBase": "master",
  },
  "implicitDependencies": Object {
    ".eslintrc.json": "*",
    "nx.json": "*",
    "package.json": Object {
      "dependencies": "*",
      "devDependencies": "*",
    },
    "tsconfig.base.json": "*",
    "tslint.json": "*",
    "workspace.json": "*",
  },
  "npmScope": "npmScope",
  "projects": Object {},
  "tasksRunnerOptions": Object {
    "default": Object {
      "options": Object {
        "cacheableOperations": Array [
          "build",
          "lint",
          "test",
          "e2e",
        ],
      },
      "runner": "@nrwl/workspace/tasks-runners/default",
    },
  },
}
`;

exports[`new --preset empty should generate an empty workspace.json 1`] = `
Object {
  "cli": Object {
    "defaultCollection": "@nrwl/workspace",
  },
  "projects": Object {},
  "version": 2,
}
`;

exports[`new --preset empty should generate an necessary npm dependencies 1`] = `
Object {
  "dependencies": Object {},
  "devDependencies": Object {
    "@nrwl/cli": "*",
    "@nrwl/tao": "*",
    "@nrwl/workspace": "*",
    "@types/node": "12.12.38",
    "dotenv": "6.2.0",
    "eslint": "7.10.0",
    "prettier": "2.1.2",
    "ts-node": "~9.1.1",
    "tslint": "~6.1.0",
    "typescript": "~4.0.3",
  },
  "license": "MIT",
  "name": "my-workspace",
  "private": true,
  "scripts": Object {
    "affected": "nx affected",
    "affected:apps": "nx affected:apps",
    "affected:build": "nx affected:build",
    "affected:dep-graph": "nx affected:dep-graph",
    "affected:e2e": "nx affected:e2e",
    "affected:libs": "nx affected:libs",
    "affected:lint": "nx affected:lint",
    "affected:test": "nx affected:test",
    "build": "nx build",
    "dep-graph": "nx dep-graph",
    "e2e": "nx e2e",
    "format": "nx format:write",
    "format:check": "nx format:check",
    "format:write": "nx format:write",
    "help": "nx help",
    "lint": "nx workspace-lint && nx lint",
    "nx": "nx",
    "start": "nx serve",
    "test": "nx test",
    "update": "nx migrate latest",
    "workspace-generator": "nx workspace-generator",
  },
  "version": "0.0.0",
}
`;

exports[`new --preset empty should generate necessary npm dependencies 1`] = `
Object {
  "dependencies": Object {},
  "devDependencies": Object {
    "@nrwl/cli": "*",
    "@nrwl/tao": "*",
    "@nrwl/workspace": "*",
    "@types/node": "12.12.38",
    "dotenv": "6.2.0",
    "eslint": "7.10.0",
    "prettier": "2.1.2",
    "ts-node": "~9.1.1",
    "tslint": "~6.1.0",
    "typescript": "~4.0.3",
  },
  "license": "MIT",
  "name": "my-workspace",
  "private": true,
  "scripts": Object {
    "affected": "nx affected",
    "affected:apps": "nx affected:apps",
    "affected:build": "nx affected:build",
    "affected:dep-graph": "nx affected:dep-graph",
    "affected:e2e": "nx affected:e2e",
    "affected:libs": "nx affected:libs",
    "affected:lint": "nx affected:lint",
    "affected:test": "nx affected:test",
    "build": "nx build",
    "dep-graph": "nx dep-graph",
    "e2e": "nx e2e",
    "format": "nx format:write",
    "format:check": "nx format:check",
    "format:write": "nx format:write",
    "help": "nx help",
    "lint": "nx workspace-lint && nx lint",
    "nx": "nx",
    "start": "nx serve",
    "test": "nx test",
    "update": "nx migrate latest",
    "workspace-generator": "nx workspace-generator",
  },
  "version": "0.0.0",
}
`;

exports[`new --preset react should generate an empty nx.json 1`] = `
Object {
  "affected": Object {
    "defaultBase": "master",
  },
  "implicitDependencies": Object {
    ".eslintrc.json": "*",
    "nx.json": "*",
    "package.json": Object {
      "dependencies": "*",
      "devDependencies": "*",
    },
    "tsconfig.base.json": "*",
    "tslint.json": "*",
    "workspace.json": "*",
  },
  "npmScope": "npmScope",
  "projects": Object {},
  "tasksRunnerOptions": Object {
    "default": Object {
      "options": Object {
        "cacheableOperations": Array [
          "build",
          "lint",
          "test",
          "e2e",
        ],
      },
      "runner": "@nrwl/workspace/tasks-runners/default",
    },
  },
}
`;

exports[`new --preset react should generate an empty workspace.json 1`] = `
Object {
  "cli": Object {
    "defaultCollection": "@nrwl/workspace",
  },
  "projects": Object {},
  "version": 2,
}
`;

exports[`new --preset react should generate necessary npm dependencies 1`] = `
Object {
  "dependencies": Object {},
  "devDependencies": Object {
    "@nrwl/cli": "*",
    "@nrwl/react": "*",
    "@nrwl/tao": "*",
    "@nrwl/workspace": "*",
    "@types/node": "12.12.38",
    "dotenv": "6.2.0",
    "eslint": "7.10.0",
    "prettier": "2.1.2",
    "ts-node": "~9.1.1",
    "tslint": "~6.1.0",
    "typescript": "~4.0.3",
  },
  "license": "MIT",
  "name": "my-workspace",
  "private": true,
  "scripts": Object {
    "affected": "nx affected",
    "affected:apps": "nx affected:apps",
    "affected:build": "nx affected:build",
    "affected:dep-graph": "nx affected:dep-graph",
    "affected:e2e": "nx affected:e2e",
    "affected:libs": "nx affected:libs",
    "affected:lint": "nx affected:lint",
    "affected:test": "nx affected:test",
    "build": "nx build",
    "dep-graph": "nx dep-graph",
    "e2e": "nx e2e",
    "format": "nx format:write",
    "format:check": "nx format:check",
    "format:write": "nx format:write",
    "help": "nx help",
    "lint": "nx workspace-lint && nx lint",
    "nx": "nx",
    "start": "nx serve",
    "test": "nx test",
    "update": "nx migrate latest",
    "workspace-generator": "nx workspace-generator",
  },
  "version": "0.0.0",
}
`;

exports[`new should 1`] = `
Object {
  "cli": Object {
    "defaultCollection": "@nrwl/workspace",
  },
  "projects": Object {},
  "version": 2,
}
`;

exports[`new should generate an empty nx.json 1`] = `
Object {
  "affected": Object {
    "defaultBase": "master",
  },
  "implicitDependencies": Object {
    ".eslintrc.json": "*",
    "nx.json": "*",
    "package.json": Object {
      "dependencies": "*",
      "devDependencies": "*",
    },
    "tsconfig.base.json": "*",
    "tslint.json": "*",
    "workspace.json": "*",
  },
  "npmScope": "npmScope",
  "projects": Object {},
  "tasksRunnerOptions": Object {
    "default": Object {
      "options": Object {
        "cacheableOperations": Array [
          "build",
          "lint",
          "test",
          "e2e",
        ],
      },
      "runner": "@nrwl/workspace/tasks-runners/default",
    },
  },
}
`;

exports[`new should generate an empty workspace.json 1`] = `
Object {
  "cli": Object {
    "defaultCollection": "@nrwl/workspace",
  },
  "projects": Object {},
  "version": 2,
}
`;
